@@ -1,3 +1,9 @@
+2010-10-09  Julien Danjou  <julien@danjou.info>
+
+	* shr.el (shr-table-corner): Add.
+	(shr-table-line): Add.
+	(shr-insert-table-ruler): Use the above defcustoms to insert tables.
+
 2010-10-08  Julien Danjou  <julien@danjou.info>
 
 	* mm-decode.el (mm-text-html-renderer): Add mm-shr in choice list.
